--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ ext {
 
 dependencies {
 	compileOnly('org.projectlombok:lombok:1.16.20')
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	implementation('org.springframework.boot:spring-boot-starter')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-jersey')
