--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
     properties.hibernate.temp.use_jdbc_metadata_defaults: false
 
+  jackson:
+    serialization:
+      write_dates_as_timestamps: false
+
 device-clients:
   cors:
     allowed-origins: '*'
