load device client config from yaml- easily configurable for prod.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,17 +13,18 @@ spring:
     serialization:
       write_dates_as_timestamps: false
 
-device-clients:
+device-authorizer:
   cors:
     allowed-origins: '*'
     allowed-methods: GET, PUT, POST, DELETE, OPTIONS
     allowed-headers: Authorization, Content-Type
     allow-credentials: true
     max-age: 1800
-  device-auth-configs:
-    - device_type: FitBit
-      authorization_endpoint: https://www.fitbit.com/oauth2/authorize
-      token_endpoint: https://api.fitbit.com/oauth2/token
-      client_id:
-      client_secret:
-      scope: activity heartrate location nutrition sleep social weight
+
+  device-clients-file-path: src/main/docker/etc/device_clients_configs.yml
+
+#      authorization_endpoint: https://www.fitbit.com/oauth2/authorize
+#      token_endpoint: https://api.fitbit.com/oauth2/token
+#      client_id:
+#      client_secret:
+#      scope: activity heartrate location nutrition sleep social weight
