--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-jersey')
 	implementation('org.springframework.boot:spring-boot-starter-validation')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 	implementation('org.liquibase:liquibase-core')
 	implementation('org.springframework.session:spring-session-core')
