--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,12 +1,14 @@
 version: '2'
 services:
-    radar-auth-app:
+    radar-auth-backend:
         image: auth-test:latest
+        depends_on:
+          - auth-postgresql
         environment:
             - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-postgresql:5432/deviceauthorizer
             - SPRING_DATASOURCE_USERNAME=radarcns
             - SPRING_DATASOURCE_PASSWORD=radarcns
-            - DEVICE_AUTH
+            - DEVICE_AUTHORIZER_DEVICE_CLIENTS_FILE_PATH=app-includes/device_clients_configs.yml
             - APP_SLEEP=10 # gives time for the database to boot before the application
         ports:
             - 8080:8080
