--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -22,3 +22,11 @@ services:
           - POSTGRES_USER=radarcns
           - POSTGRES_PASSWORD=radarcns
           - POSTGRES_DB=deviceauthorizer
+
+    radar-auth-frontend:
+        image: auth-front:latest
+        depends_on:
+          - radar-auth-backend
+          - auth-postgresql
+        ports:
+          - "3000:80"
