--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     postgresql:
-        image: postgres:9.6.2
+        image: postgres:10.4-alpine
         ports:
           - "5432:5432"
         environment:
