--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'org.radarcns'
-version = '0.0.1-SNAPSHOT'
+version = '0.1'
 sourceCompatibility = 1.8
 
 repositories {
@@ -28,7 +28,7 @@ repositories {
 }
 
 ext {
-	githubRepoName = 'RADAR-base/RADAR-Device-Authorizer'
+	githubRepoName = 'RADAR-base/RADAR-Device-Auth'
 	githubUrl = 'https://github.com/' + githubRepoName + '.git'
 	issueUrl = 'https://github.com/' + githubRepoName + '/issues'
 	website = 'http://radar-base.org'
