--- a/authorizer-app/Dockerfile
+++ b/authorizer-app/Dockerfile
@@ -2,7 +2,7 @@ FROM node:8.12.0-alpine as builder
 
 WORKDIR /app
 
-COPY package.json /app/
+COPY package*.json /app/
 RUN npm install
 
 COPY ./ /app/
