--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,30 +1,28 @@
 version: '2'
 services:
-    radar-auth-backend:
-        image: radarbase/radar-device-auth-backend:latest
+    radar-rest-source-auth-backend:
+        image: radarbase/radar-rest-source-auth-backend:latest
         depends_on:
           - auth-postgresql
         environment:
-            - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-postgresql:5432/deviceauthorizer
+            - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-postgresql:5432/restsourceauth
             - SPRING_DATASOURCE_USERNAME=radarcns
             - SPRING_DATASOURCE_PASSWORD=radarcns
-            - DEVICE_AUTHORIZER_DEVICE_CLIENTS_FILE_PATH=app-includes/device_clients_configs.yml
+            - REST_SOURCE_AUTHORIZER_SOURCE_CLIENTS_CONFIG_FILE_PATH=app-includes/rest_source_clients_configs.yml
             - APP_SLEEP=10 # gives time for the database to boot before the application
         volumes:
             - ./etc:/app-includes
     auth-postgresql:
         image: postgres:10.4-alpine
-#        ports:
-#          - "5432:5432"
         environment:
           - POSTGRES_USER=radarcns
           - POSTGRES_PASSWORD=radarcns
-          - POSTGRES_DB=deviceauthorizer
+          - POSTGRES_DB=restsourceauth
 
-    radar-auth-frontend:
-        image: radarbase/radar-device-authorizer:latest
+    radar-rest-source-authorizer:
+        image: radarbase/radar-rest-source-authorizer:latest
         depends_on:
-          - radar-auth-backend
+          - radar-rest-auth-backend
           - auth-postgresql
         ports:
           - "3000:80"
