--- a/src/main/docker/etc/rest_source_clients_configs.yml.template
+++ b/src/main/docker/etc/rest_source_clients_configs.yml.template
@@ -1,7 +1,7 @@
-device_clients:
-  - device_type: FitBit
+rest_source_clients:
+  - source_type: FitBit
     authorization_endpoint: https://www.fitbit.com/oauth2/authorize
     token_endpoint: https://api.fitbit.com/oauth2/token
-    client_id: 
-    client_secret:
+    client_id: FITBITIT
+    client_secret: FITBITSECRET
     scope: activity heartrate sleep profile
