--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
-    - includeAll:
-        path: db/changelog/changes/
+    - include:
+       file: db/changelog/changes/00000000000000_initial_schema.xml
