--- a/authorizer-app/Dockerfile
+++ b/authorizer-app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:8.12.0-alpine as builder
 
-ARG BASE_HREF=/rest-sources/authorizer/
-ARG PROFILE=--prod
+ARG BASE_HREF="/rest-sources/authorizer/"
+ARG PROFILE="--prod"
 
 WORKDIR /app
 
@@ -10,7 +10,7 @@ RUN npm install
 
 COPY ./ /app/
 
-RUN $(npm bin)/ng build ${PROFILE} --base-href ${BASE_HREF}
+RUN $(npm bin)/ng build ${PROFILE} --base-href=${BASE_HREF}
 
 
 FROM nginx:1.15.5-alpine
