--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,5 +23,10 @@ rest-source-authorizer:
 
   source-clients-file-path: src/main/docker/etc/rest_source_clients_configs.yml
 
-validator: managementportal
-mp-config-file-path: src/main/docker/etc/management_portal_config.yml
+  validator: managementportal
+  management-portal:
+    base-url: "http://localhost:8081"
+    projects-path: "/projects"
+    subjects-path: "/subjects"
+    oauth-client-id: "radar_rest_sources_auth"
+    oauth-client-secret: "secret"
