--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,8 +25,9 @@ rest-source-authorizer:
 
   validator: managementportal
   management-portal:
-    base-url: "http://localhost:8081"
-    projects-path: "/projects"
-    subjects-path: "/subjects"
+    base-url: "http://localhost:8081/"
+    projects-path: "api/projects"
+    subjects-path: "api/subjects"
+    token_path: "oauth/token"
     oauth-client-id: "radar_rest_sources_auth"
     oauth-client-secret: "secret"
