--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'org.radarcns'
-version = '1.2.1'
+version = '1.2.2-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
