--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
     - include:
        file: db/changelog/changes/00000000000000_initial_schema.xml
+    - include:
+       file: db/changelog/changes/00000000000001_update_schema.xml
