Add a times reset property to indicate the number of times a user has been reset
- Renames the column Version to Reset Info in the frontend which now includes both the version and times reset.

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
        file: db/changelog/changes/00000000000000_initial_schema.xml
     - include:
        file: db/changelog/changes/00000000000001_update_schema.xml
+    - include:
+       file: db/changelog/changes/00000000000002_update_schema.xml
