dockerize auth-app with runtime configurable env variables

--- a/authorizer-app/Dockerfile
+++ b/authorizer-app/Dockerfile
@@ -13,7 +13,7 @@ COPY ./ /app/
 RUN $(npm bin)/ng build ${PROFILE}
 
 
-FROM nginx:1.15.5-alpine
+FROM nginx:1.17.3-alpine
 
 # add init script
 COPY ./docker/nginx.conf /etc/nginx/nginx.conf
@@ -22,5 +22,9 @@ WORKDIR /usr/share/nginx/html
 
 COPY --from=builder /app/dist/authorizer-app/ .
 
+COPY ./docker/entrypoint.sh /entrypoint.sh
 # expose internal port:80 and run init.sh
 EXPOSE 80
+
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["nginx", "-g", "daemon off;"]
