--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'org.radarcns'
-version = '1.4.0-SNAPSHOT'
+version = '1.3.1'
 sourceCompatibility = 1.8
 
 repositories {
