--- a/docker/etc/webserver/nginx-proxy.conf
+++ b/docker/etc/webserver/nginx-proxy.conf
@@ -22,7 +22,7 @@ http {
         }
 
         location /rest-sources/backend/ {
-            proxy_pass         http://radar-rest-sources-backend:8080/;
+            proxy_pass         http://radar-rest-sources-backend:8085/rest-sources/backend/;
               proxy_set_header   Host $host;
         }
 
