--- a/docker/etc/rest-source-authorizer/authorizer.yml
+++ b/docker/etc/rest-source-authorizer/authorizer.yml
@@ -13,11 +13,11 @@ auth:
   clientSecret: secret
 
 database:
-  jdbcDriver: org.postgresql.Driver
-  jdbcUrl: jdbc:postgresql://radarbase-postgresql:5432/restsourceauthorizer
-  jdbcUser: radarcns
-  jdbcPassword: radarcns
-  hibernateDialect: org.hibernate.dialect.PostgreSQLDialect
+  driver: org.postgresql.Driver
+  url: jdbc:postgresql://radarbase-postgresql:5432/restsourceauthorizer
+  user: radarcns
+  password: radarcns
+  dialect: org.hibernate.dialect.PostgreSQLDialect
 
 restSourceClients:
   - sourceType: FitBit
