--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,10 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.kt]
+continuation_indent_size = 4
+disabled_rules=no-wildcard-imports
+
 [*.md]
 trim_trailing_whitespace = false
 
