Fix docker build
Add user 101, curl, no-watch-fs

--- a/authorizer-app-backend/Dockerfile
+++ b/authorizer-app-backend/Dockerfile
@@ -10,7 +10,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM gradle:6.6.1-jdk11 as builder
+FROM gradle:7.0-jdk11 as builder
 
 RUN mkdir /code
 WORKDIR /code
@@ -18,11 +18,11 @@ ENV GRADLE_USER_HOME=/code/.gradlecache
 
 COPY ./build.gradle.kts ./settings.gradle.kts ./gradle.properties /code/
 COPY authorizer-app-backend/build.gradle.kts  /code/authorizer-app-backend/
-RUN gradle :authorizer-app-backend:downloadDependencies
+RUN gradle :authorizer-app-backend:downloadDependencies --no-watch-fs
 
 COPY authorizer-app-backend/src /code/authorizer-app-backend/src
 
-RUN gradle -Dkotlin.compiler.execution.strategy="in-process" -Dorg.gradle.parallel=false -Pkotlin.incremental=false :authorizer-app-backend:distTar \
+RUN gradle -Dkotlin.compiler.execution.strategy="in-process" -Dorg.gradle.parallel=false -Pkotlin.incremental=false --no-watch-fs :authorizer-app-backend:distTar \
     && cd authorizer-app-backend/build/distributions \
     && tar xf *.tar \
     && rm *.tar authorizer-app-backend-*/lib/authorizer-app-backend-*.jar
@@ -33,9 +33,19 @@ MAINTAINER @nivemaham @blootsvoets
 
 LABEL description="RADAR-base rest sources authorizer backend application"
 
+# Override JAVA_OPTS to set heap parameters, for example
+ENV JAVA_OPTS="" \
+    AUTHORIZER_APP_BACKEND_OPTS=""
+
+RUN apt-get update && apt-get install -y \
+  curl \
+  && rm -rf /var/lib/apt/lists/*
+
 COPY --from=builder /code/authorizer-app-backend/build/distributions/authorizer-app-backend-*/bin/* /usr/bin/
 COPY --from=builder /code/authorizer-app-backend/build/distributions/authorizer-app-backend-*/lib/* /usr/lib/
 COPY --from=builder /code/authorizer-app-backend/build/libs/authorizer-app-backend-*.jar /usr/lib/
+
+USER 101
 
 EXPOSE 8085
 
